[project]
name = "14-langgraph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "httpx[socks]>=0.28.1",
    "ipython>=9.8.0",
    "langchain>=1.1.0",
    "langchain-anthropic>=1.3.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "polars>=1.36.1",
    "python-dotenv>=1.2.1",
    "typing>=3.10.0.0",
]
